Bug 474254 - System Settings crashes on close
Summary: System Settings crashes on close
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: generic-crash (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR crash
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: drkonqi, qt6
Depends on:
Blocks:
 
Reported: 2023-09-07 11:43 UTC by Patrick Silva
Modified: 2023-09-07 16:52 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
New crash information added by DrKonqi (79.30 KB, text/plain)
2023-09-07 11:43 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2023-09-07 11:43:24 UTC
Application: systemsettings (5.27.80)

Qt Version: 6.6.0
Frameworks Version: 5.240.0
Operating System: Linux 6.4.10-060410-generic x86_64
Windowing System: Wayland
Distribution: KDE neon Unstable Edition
DrKonqi: 5.27.80 [CoredumpBackend]

-- Information about the crash:
open Device Actons KCM, close System Settings, Plasma notifies a crash in System Settings.

The crash can be reproduced every time.

-- Backtrace (Reduced):
#9  0x00007f36debabf65 in QObjectPrivate::deleteChildren() (this=this@entry=0x55bd1abee180) at ./src/corelib/kernel/qobject.cpp:2206
#10 0x00007f36dfbdd4c8 in QWidget::~QWidget() (this=0x55bd1a97e6d0, __in_chrg=<optimized out>) at ./src/widgets/kernel/qwidget.cpp:1537
#11 0x00007f36dfd7e98d in QScrollArea::~QScrollArea() (this=0x55bd1a97e6d0, __in_chrg=<optimized out>) at ./src/widgets/widgets/qscrollarea.cpp:133
#12 0x00007f36debabf65 in QObjectPrivate::deleteChildren() (this=this@entry=0x55bd19efcb70) at ./src/corelib/kernel/qobject.cpp:2206
#13 0x00007f36dfbdd4c8 in QWidget::~QWidget() (this=0x55bd19cb89a0, __in_chrg=<optimized out>) at ./src/widgets/kernel/qwidget.cpp:1537


Reported using DrKonqi
Comment 1 Patrick Silva 2023-09-07 11:43:27 UTC
Created attachment 161492 [details]
New crash information added by DrKonqi

DrKonqi auto-attaching complete backtrace.
Comment 2 Nicolas Fella 2023-09-07 12:51:06 UTC
#0  0x0000000000000001 in  ()
#1  0x00007ffff47dc2e5 in QObject::~QObject() (this=0x156f510, __in_chrg=<optimized out>) at /usr/src/debug/qt6-qtbase-6.5.2-1.fc38.x86_64/src/corelib/kernel/qobject.cpp:1121
#2  0x00007fff9a38d5e1 in SolidActions::~SolidActions() (this=0x14ed770, __in_chrg=<optimized out>) at /home/nico/kde6/src/plasma-desktop/kcms/solid_actions/SolidActions.cpp:67
#3  0x00007fff9a38d609 in SolidActions::~SolidActions() (this=0x14ed770, __in_chrg=<optimized out>) at /home/nico/kde6/src/plasma-desktop/kcms/solid_actions/SolidActions.cpp:69
#4  0x00007ffff47d772d in QObjectPrivate::deleteChildren() (this=this@entry=0x1557740) at /usr/src/debug/qt6-qtbase-6.5.2-1.fc38.x86_64/src/corelib/kernel/qobject.cpp:2174
#5  0x00007ffff6e18448 in QWidget::~QWidget() (this=0x1508c50, __in_chrg=<optimized out>) at /usr/src/debug/qt6-qtbase-6.5.2-1.fc38.x86_64/src/widgets/kernel/qwidget.cpp:1531
#6  0x00007ffff6fc0345 in QScrollArea::~QScrollArea() (this=0x1508c50, __in_chrg=<optimized out>) at /usr/src/debug/qt6-qtbase-6.5.2-1.fc38.x86_64/src/widgets/widgets/qscrollarea.cpp:137
#7  0x00007ffff47d772d in QObjectPrivate::deleteChildren() (this=this@entry=0x7a6370) at /usr/src/debug/qt6-qtbase-6.5.2-1.fc38.x86_64/src/corelib/kernel/qobject.cpp:2174
#8  0x00007ffff6e18448 in QWidget::~QWidget() (this=this@entry=0x784090, __in_chrg=<optimized out>) at /usr/src/debug/qt6-qtbase-6.5.2-1.fc38.x86_64/src/widgets/kernel/qwidget.cpp:1531
#9  0x00007ffff6eb8211 in QFrame::~QFrame() (this=this@entry=0x784090, __in_chrg=<optimized out>) at /usr/src/debug/qt6-qtbase-6.5.2-1.fc38.x86_64/src/widgets/widgets/qframe.cpp:229
#10 0x00007ffff6fd9991 in QStackedWidget::~QStackedWidget() (this=this@entry=0x784090, __in_chrg=<optimized out>) at /usr/src/debug/qt6-qtbase-6.5.2-1.fc38.x86_64/src/widgets/widgets/qstackedwidget.cpp:111
#11 0x00007ffff7683c4d in KPageStackedWidget::~KPageStackedWidget() (this=0x784090, __in_chrg=<optimized out>) at /home/nico/kde6/src/kwidgetsaddons/src/kpageview_p.h:25
#12 KPageStackedWidget::~KPageStackedWidget() (this=0x784090, __in_chrg=<optimized out>) at /home/nico/kde6/src/kwidgetsaddons/src/kpageview_p.h:25
#13 0x00007ffff47d772d in QObjectPrivate::deleteChildren() (this=this@entry=0x75f480) at /usr/src/debug/qt6-qtbase-6.5.2-1.fc38.x86_64/src/corelib/kernel/qobject.cpp:2174
#14 0x00007ffff6e18448 in QWidget::~QWidget() (this=0x7871a0, __in_chrg=<optimized out>) at /usr/src/debug/qt6-qtbase-6.5.2-1.fc38.x86_64/src/widgets/kernel/qwidget.cpp:1531
#15 0x00007ffff76859b9 in KPageWidget::~KPageWidget() (this=0x7871a0, __in_chrg=<optimized out>) at /home/nico/kde6/src/kwidgetsaddons/src/kpagewidget.cpp:58
#16 0x00007ffff47d772d in QObjectPrivate::deleteChildren() (this=this@entry=0x874e00) at /usr/src/debug/qt6-qtbase-6.5.2-1.fc38.x86_64/src/corelib/kernel/qobject.cpp:2174
#17 0x00007ffff6e18448 in QWidget::~QWidget() (this=0x753b40, __in_chrg=<optimized out>) at /usr/src/debug/qt6-qtbase-6.5.2-1.fc38.x86_64/src/widgets/kernel/qwidget.cpp:1531
#18 0x00007ffff7fb3b59 in ModuleView::~ModuleView() (this=0x753b40, __in_chrg=<optimized out>) at /home/nico/kde6/src/systemsettings/core/ModuleView.cpp:210
#19 0x00007ffff47d772d in QObjectPrivate::deleteChildren() (this=this@entry=0x85fc80) at /usr/src/debug/qt6-qtbase-6.5.2-1.fc38.x86_64/src/corelib/kernel/qobject.cpp:2174
#20 0x00007ffff6e18448 in QWidget::~QWidget() (this=this@entry=0x8636d0, __in_chrg=<optimized out>) at /usr/src/debug/qt6-qtbase-6.5.2-1.fc38.x86_64/src/widgets/kernel/qwidget.cpp:1531
#21 0x00007fffd1f37d4d in FocusHackWidget::~FocusHackWidget() (this=0x8636d0, __in_chrg=<optimized out>) at /home/nico/kde6/src/systemsettings/sidebar/SidebarMode.cpp:51
#22 FocusHackWidget::~FocusHackWidget() (this=0x8636d0, __in_chrg=<optimized out>) at /home/nico/kde6/src/systemsettings/sidebar/SidebarMode.cpp:51
#23 0x00007ffff47d772d in QObjectPrivate::deleteChildren() (this=this@entry=0x5f31c0) at /usr/src/debug/qt6-qtbase-6.5.2-1.fc38.x86_64/src/corelib/kernel/qobject.cpp:2174
#24 0x00007ffff6e18448 in QWidget::~QWidget() (this=0x56f1e0, __in_chrg=<optimized out>) at /usr/src/debug/qt6-qtbase-6.5.2-1.fc38.x86_64/src/widgets/kernel/qwidget.cpp:1531
#25 0x00007ffff6fd99b5 in QStackedWidget::~QStackedWidget() (this=0x56f1e0, __in_chrg=<optimized out>) at /usr/src/debug/qt6-qtbase-6.5.2-1.fc38.x86_64/src/widgets/widgets/qstackedwidget.cpp:111
#26 0x00007ffff47d772d in QObjectPrivate::deleteChildren() (this=this@entry=0x56d930) at /usr/src/debug/qt6-qtbase-6.5.2-1.fc38.x86_64/src/corelib/kernel/qobject.cpp:2174
#27 0x00007ffff6e18448 in QWidget::~QWidget() (this=this@entry=0x60fec0, __in_chrg=<optimized out>) at /usr/src/debug/qt6-qtbase-6.5.2-1.fc38.x86_64/src/widgets/kernel/qwidget.cpp:1531
#28 0x00007ffff6f6b0c1 in QMainWindow::~QMainWindow() (this=this@entry=0x60fec0, __in_chrg=<optimized out>) at /usr/src/debug/qt6-qtbase-6.5.2-1.fc38.x86_64/src/widgets/widgets/qmainwindow.cpp:338
#29 0x00007ffff7d5a3e1 in KMainWindow::~KMainWindow() (this=this@entry=0x60fec0, __in_chrg=<optimized out>) at /home/nico/kde6/src/kxmlgui/src/kmainwindow.cpp:436
#30 0x00007ffff7da06ab in KXmlGuiWindow::~KXmlGuiWindow() (this=this@entry=0x60fec0, __vtt_parm=__vtt_parm@entry=0x420640 <VTT for SettingsBase+8>, __in_chrg=<optimized out>)
    at /home/nico/kde6/src/kxmlgui/src/kxmlguiwindow.cpp:216
#31 0x0000000000415201 in SettingsBase::~SettingsBase() (this=0x60fec0, __in_chrg=<optimized out>, __vtt_parm=<optimized out>) at /home/nico/kde6/src/systemsettings/app/SettingsBase.cpp:83
#32 0x0000000000415309 in SettingsBase::~SettingsBase() (this=0x60fec0, __in_chrg=<optimized out>, __vtt_parm=<optimized out>) at /home/nico/kde6/src/systemsettings/app/SettingsBase.cpp:83
#33 0x00007ffff47cfc59 in QObject::event(QEvent*) (this=this@entry=0x60fec0, e=e@entry=0xf97850) at /usr/src/debug/qt6-qtbase-6.5.2-1.fc38.x86_64/src/corelib/kernel/qobject.cpp:1378
#34 0x00007ffff6e1cd6f in QWidget::event(QEvent*) (this=this@entry=0x60fec0, event=event@entry=0xf97850) at /usr/src/debug/qt6-qtbase-6.5.2-1.fc38.x86_64/src/widgets/kernel/qwidget.cpp:9374
#35 0x00007ffff6f6ccb6 in QMainWindow::event(QEvent*) (this=this@entry=0x60fec0, event=event@entry=0xf97850) at /usr/src/debug/qt6-qtbase-6.5.2-1.fc38.x86_64/src/widgets/widgets/qmainwindow.cpp:1303
#36 0x00007ffff7d5adda in KMainWindow::event(QEvent*) (this=this@entry=0x60fec0, ev=ev@entry=0xf97850) at /home/nico/kde6/src/kxmlgui/src/kmainwindow.cpp:911
#37 0x00007ffff7da3897 in KXmlGuiWindow::event(QEvent*) (this=0x60fec0, ev=0xf97850) at /home/nico/kde6/src/kxmlgui/src/kxmlguiwindow.cpp:220
#38 0x00007ffff6dc0af8 in QApplicationPrivate::notify_helper(QObject*, QEvent*) (this=<optimized out>, receiver=0x60fec0, e=0xf97850)
    at /usr/src/debug/qt6-qtbase-6.5.2-1.fc38.x86_64/src/widgets/kernel/qapplication.cpp:3287
#39 0x00007ffff477cdb8 in QCoreApplication::notifyInternal2(QObject*, QEvent*) (receiver=0x60fec0, event=0xf97850) at /usr/src/debug/qt6-qtbase-6.5.2-1.fc38.x86_64/src/corelib/kernel/qcoreapplication.cpp:1118
#40 0x00007ffff477cfbd in QCoreApplication::sendEvent(QObject*, QEvent*) (receiver=<optimized out>, event=<optimized out>)
    at /usr/src/debug/qt6-qtbase-6.5.2-1.fc38.x86_64/src/corelib/kernel/qcoreapplication.cpp:1536
#41 0x00007ffff47808d5 in QCoreApplicationPrivate::sendPostedEvents(QObject*, int, QThreadData*) (receiver=0x0, event_type=0, data=0x453c60)
    at /usr/src/debug/qt6-qtbase-6.5.2-1.fc38.x86_64/src/corelib/kernel/qcoreapplication.cpp:1898
#42 0x00007ffff4780c0d in QCoreApplication::sendPostedEvents(QObject*, int) (receiver=<optimized out>, event_type=<optimized out>)
    at /usr/src/debug/qt6-qtbase-6.5.2-1.fc38.x86_64/src/corelib/kernel/qcoreapplication.cpp:1757
#43 0x00007ffff4a2108f in postEventSourceDispatch(GSource*, GSourceFunc, gpointer) (s=0x6fca20) at /usr/src/debug/qt6-qtbase-6.5.2-1.fc38.x86_64/src/corelib/kernel/qeventdispatcher_glib.cpp:243
#44 0x00007ffff3b2b4fc in g_main_dispatch (context=0x7fffdc000f10) at ../glib/gmain.c:3460
#45 g_main_context_dispatch (context=0x7fffdc000f10) at ../glib/gmain.c:4200
#46 0x00007ffff3b896b8 in g_main_context_iterate.isra.0 (context=0x7fffdc000f10, block=1, dispatch=1, self=<optimized out>) at ../glib/gmain.c:4276
#47 0x00007ffff3b28b83 in g_main_context_iteration (context=0x7fffdc000f10, may_block=1) at ../glib/gmain.c:4343
#48 0x00007ffff4a2092f in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) (this=0x4561a0, flags=...)
    at /usr/src/debug/qt6-qtbase-6.5.2-1.fc38.x86_64/src/corelib/kernel/qeventdispatcher_glib.cpp:393
#49 0x00007ffff47899f3 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) (this=this@entry=0x7fffffffd240, flags=..., flags@entry=...)
    at /usr/src/debug/qt6-qtbase-6.5.2-1.fc38.x86_64/src/corelib/global/qflags.h:34
--Type <RET> for more, q to quit, c to continue without paging--c
#50 0x00007ffff478569d in QCoreApplication::exec() () at /usr/src/debug/qt6-qtbase-6.5.2-1.fc38.x86_64/src/corelib/global/qflags.h:74
#51 0x00007ffff51f917d in QGuiApplication::exec() () at /usr/src/debug/qt6-qtbase-6.5.2-1.fc38.x86_64/src/gui/kernel/qguiapplication.cpp:1908
#52 0x00007ffff6dc0a69 in QApplication::exec() () at /usr/src/debug/qt6-qtbase-6.5.2-1.fc38.x86_64/src/widgets/kernel/qapplication.cpp:2566
#53 0x000000000040ed7f in main(int, char**) (argc=<optimized out>, argv=<optimized out>) at /home/nico/kde6/src/systemsettings/app/main.cpp:185
Comment 3 Bug Janitor Service 2023-09-07 13:05:53 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-desktop/-/merge_requests/1697
Comment 4 Nate Graham 2023-09-07 14:37:27 UTC
Git commit ed571ad354cc9cdfdc340488bae0dc3d28b223ae by Nate Graham, on behalf of Nicolas Fella.
Committed on 07/09/2023 at 16:32.
Pushed by ngraham into branch 'master'.

[kcms/solidactions] Fix double delete on close

These things have a parent, don't manually delete them

M  +0    -6    kcms/solid_actions/SolidActions.cpp
M  +0    -1    kcms/solid_actions/SolidActions.h

https://invent.kde.org/plasma/plasma-desktop/-/commit/ed571ad354cc9cdfdc340488bae0dc3d28b223ae