[kcms/solidactions] Fix double delete on close

These things have a parent, don't manually delete them

BUG: 474254